# TernaryStem

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: benchmark_shapes.json  experiment.yaml
configs/colab/: fp16_mask_large_pilot.yaml  fp32_mask_control.yaml  fp32_mask_large_pilot.yaml  fp32_mask_medium.yaml  htdemucs_distillation.yaml  ternary_mask_large_pilot.yaml
configs/remote/: fp32_complex_mask.yaml  fp32_direct.yaml
configs/smoke/: fp32.yaml  fp32_complex_mask.yaml  fp32_medium.yaml  htdemucs_distillation.yaml  mixed.yaml  ternary_qat.yaml  w4a8.yaml  w8a8.yaml
docs/: BENCHMARK_PROTOCOL.md  GATE0_REPORT.md  MODEL_CARD.md  NEW_SESSION_PROMPT.md  PLAN.md  STATUS.md  VAST_AI.md
results/: README.md  int8_kernel_benchmark.json  operator_shapes.json  quant_probe_absmean.json  quant_probe_adaptive.json
results/remote/2026-07-17-selective-ternary/: README.md  checkpoint-sha256.txt  fp32-control-experiment.json  fp32-large-experiment.json  selective-ternary-experiment.json  source-archive-sha256.txt  ternary-sensitivity.json
runtime/: CMakeLists.txt
runtime/benchmarks/: bitnet_comparison.cpp  gemm_benchmark.cpp
runtime/include/ternarystem/: kernels.h
runtime/kernels/avx2/: ternary_gemm_avx2.cpp
runtime/kernels/scalar/: ternary_gemm.cpp
runtime/tests/: kernel_test.cpp
scripts/: benchmark.py  benchmark_int8.py  compare_runs.py  evaluate.py  export.py  inventory.py  quant_probe.py  sensitivity.py  separate.py  train.py  validate.py
scripts/vast/: preflight.py  prepare_qat.py  run_pipeline.sh  setup.sh  start.sh  stop.sh
src/ternarystem/: __init__.py  cli.py  config.py
src/ternarystem/audio/: __init__.py  chunking.py  stft.py
src/ternarystem/data/: __init__.py  musdb.py  musdb18_split.json  split.py
src/ternarystem/evaluation/: __init__.py  comparison.py  diagnostics.py  records.py
src/ternarystem/export/: __init__.py  packing.py
src/ternarystem/losses/: __init__.py  separation.py
src/ternarystem/models/: __init__.py  tfc_tdf.py
src/ternarystem/quant/: __init__.py  activation.py  ternary.py  uniform.py
src/ternarystem/training/: __init__.py  checkpoint.py  distillation.py  persistence.py  quantization.py  scheduler.py
tests/audio/: test_stft.py
tests/integration/: test_dataset.py  test_model.py
tests/unit/: test_checkpoint.py  test_config.py  test_diagnostics.py  test_distillation.py  test_losses.py  test_packing.py  test_persistence.py  test_quantization.py  test_records.py  test_split.py
