[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "ternarystem"
version = "0.1.0"
description = "Research toolkit for ternary four-stem music source separation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
  "torch>=2.2",
  "numpy>=1.26",
  "soundfile>=0.12",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
eval = ["museval>=0.4", "musdb>=0.4"]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.5"]

[project.scripts]
ternarystem-separate = "ternarystem.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ternarystem"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py310"
