cmake_minimum_required(VERSION 3.20)
project(ternarystem_runtime VERSION 0.1.0 LANGUAGES CXX)

option(TERNARYSTEM_NATIVE "Enable compiler native-architecture tuning" OFF)
set(BITNET_ROOT "" CACHE PATH "Optional path to a built microsoft/BitNet checkout")
add_library(ternarystem_kernels STATIC kernels/scalar/ternary_gemm.cpp)
target_include_directories(ternarystem_kernels PUBLIC include)
if(CMAKE_SYSTEM_PROCESSOR MATCHES "x86_64|AMD64|amd64")
  target_sources(ternarystem_kernels PRIVATE kernels/avx2/ternary_gemm_avx2.cpp)
  target_compile_definitions(ternarystem_kernels PUBLIC TERNARYSTEM_HAS_AVX2=1)
  if(MSVC)
    set_source_files_properties(kernels/avx2/ternary_gemm_avx2.cpp PROPERTIES COMPILE_OPTIONS "/arch:AVX2")
  else()
    set_source_files_properties(kernels/avx2/ternary_gemm_avx2.cpp PROPERTIES COMPILE_OPTIONS "-mavx2")
  endif()
endif()
target_compile_features(ternarystem_kernels PUBLIC cxx_std_17)
target_compile_options(ternarystem_kernels PRIVATE $<$<CXX_COMPILER_ID:GNU,Clang>:-Wall;-Wextra;-Wpedantic>)
if(TERNARYSTEM_NATIVE AND CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
  target_compile_options(ternarystem_kernels PRIVATE -march=native)
endif()

add_executable(ternary_bench benchmarks/gemm_benchmark.cpp)
target_link_libraries(ternary_bench PRIVATE ternarystem_kernels)
add_executable(kernel_test tests/kernel_test.cpp)
target_link_libraries(kernel_test PRIVATE ternarystem_kernels)
if(BITNET_ROOT)
  find_library(BITNET_GGML_CPU ggml-cpu PATHS "${BITNET_ROOT}/build/bin" REQUIRED NO_DEFAULT_PATH)
  find_library(BITNET_GGML_BASE ggml-base PATHS "${BITNET_ROOT}/build/bin" REQUIRED NO_DEFAULT_PATH)
  add_executable(bitnet_comparison benchmarks/bitnet_comparison.cpp)
  target_link_libraries(bitnet_comparison PRIVATE
    ternarystem_kernels "${BITNET_GGML_CPU}" "${BITNET_GGML_BASE}")
  set_target_properties(bitnet_comparison PROPERTIES
    BUILD_RPATH "${BITNET_ROOT}/build/bin")
endif()
enable_testing()
add_test(NAME scalar_kernel_correctness COMMAND kernel_test)
